Closed Bug 1074634 Opened 10 years ago Closed 10 years ago

don't overwrite eRestyleResult_ContinueAndForceDescendants with eRestyleResult_Continue

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

I was looking at restyling code trying to figure out what might have
been leading to an assertion (in bug 1067755, or bug 1060194), and I
thought I found a bug that seems problematic.

It turned not to be related to those bugs, but I think it's probably
good to fix anyway.
(Note that I don't know of anything that's fixed by this patch, but I suspect there
is something...)
Attachment #8497297 - Flags: review?(cam) → review+
https://hg.mozilla.org/mozilla-central/rev/db62faf07ac4
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: